Fix dark mode issues
Uses Codex tokens for some hardcoded tokens for dark mode compat. The
border between category entries is made a bit darker on light mode to
use an existing border-color- token.

--- a/resources/mediasearch-variables.less
+++ b/resources/mediasearch-variables.less
@@ -11,7 +11,7 @@
 // https://doc.wikimedia.org/codex/latest/style-guide/colors.html
 // TODO: Not aN icon color used elsewhere.
 @sdms-icon-color--subtle: #a2a9b1;
-@sdms-background-color-namespace-label: #eaecf0;
+@sdms-background-color-namespace-label: @background-color-interactive;
 @sdms-background-color-tool--hover: @background-color-interactive-subtle;
 @sdms-background-color-tool--focus: @background-color-interactive;
 @sdms-background-color-tool--active: @background-color-interactive;
@@ -19,7 +19,7 @@
 
 // Border
 // ---------------------------------------------------------
-@sdms-border-color-result: #eaecf0;
+@sdms-border-color-result: @border-color-muted;
 @sdms-border-color-tool: transparent;
 @sdms-border-color-tool--hover: @border-color-interactive;
 
